top banner added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel=" stylesheet" href="style.css">
 </head>
 <body>
-    <h1> saiful isalm portpolio </h1>
+    <section class="top-banner">
+    <div class="half-width"><h1 > Welcome to </h1>
+    <h2><span class="orange">Freelancer Alex </span>world </h2>
+    <p>Hello everyone, I'm a freelancer in the Web Development & Graphic DesignI have 2 years of experience, 
+       with different companies and customers from different countries in the world. And I have skills in programs:
+      Adobe Photoshop Adobe Illustrator Adobe In Design. I have good experience in the following areas: Web Development,
+      HTML CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design experience. 100% refund if not satisfied.</p>
+    <a class="link-button" target="_blank" href="https://cutt.ly/saiful298">HIRE ME</a>
+    </div>
+      <div class="half-width"><img src="images/saiful.png" alt=""></div>
+    </section>
 </body>
 </html>
