--- a/index.html
+++ b/index.html
@@ -21,6 +21,24 @@
     <a class="link-button" target="_blank" href="https://cutt.ly/saiful298">HIRE ME</a>
     </div>
       <div class="half-width"><img src="images/saiful.png" alt=""></div>
-    </section>
+          </section><hr>
+<section class="bottom-banner">
+<div class="full-width"><img src="images/saiful1.png" alt=""></div>
+<div class="full-width">
+  <h3 class="deel">We Deal With Various Technical Issues With Worldwide Clients' Websites </h3>
+  <p>Hello everyone, I'm a freelancer in the Web Development & Graphic DesignI have 2 years of experience, 
+    with different companies and customers from different countries in the world. And I have skills in programs:
+   Adobe Photoshop Adobe Illustrator Adobe In Design. I have good experience in the following areas: Web Development,
+   HTML CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design experience. 100% refund if not satisfied.</p>
+   <a class="link-button" target="_blank" href="https://cutt.ly/saiful298">See Previous Works</a><br><br>
+   <img src="images/c.jpg" alt="">
+  </div>
+</section>
+
+
+
+
+
+
 </body>
 </html>
