--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section class="bottom-banner">
 <div class="full-width"><img src="images/saiful1.png" alt=""></div>
 <div class="full-width">
-  <h3 class="deel">We Deal With Various Technical Issues With Worldwide Clients' Websites </h3>
+  <h1 class="deel">We Deal With Various Technical Issues With Worldwide Clients' Websites </h1>
   <p>Hello everyone, I'm a freelancer in the Web Development & Graphic DesignI have 2 years of experience, 
     with different companies and customers from different countries in the world. And I have skills in programs:
    Adobe Photoshop Adobe Illustrator Adobe In Design. I have good experience in the following areas: Web Development,
@@ -33,6 +33,29 @@
    <a class="link-button" target="_blank" href="https://cutt.ly/saiful298">See Previous Works</a><br><br>
    <img src="images/c.jpg" alt="">
   </div>
+</section>
+<hr> <h1 class="orange"> <center> Experiences</center></h1><br>
+<section class="part-three">
+  <div class="skill" >
+    <h1>Professional Freelancer on Web Design & Graphic Design With <span class="green">Fiverr</span></h1>
+    <h4 class="orange">2020-Present | Level 1 Seller</h4>
+    <p>Hello &nbsp; everyone,&nbsp; I'm a freelancer &nbsp;in &nbsp;the &nbsp; Graphic Design&nbsp; & Web Development I have 2 years of experience,
+       with different companies <br> and customers from different countries in the world. And I have skills <br> in&nbsp;
+        programs: Adobe Photoshop&nbsp; Adobe Illustrator&nbsp; Adobe In Design. <br> I have good experience in the following
+         areas: Web Development, br HTML CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design
+          experience. 100% refund if not satisfied.</p>
+  </div>
+
+  <div class="skill" >
+    <h1>Professional Freelancer on Web Design & Graphic Design With <span class="green">Upwork</span> </h1>
+    <h4 class="orange">2020-Present | Level 1 Seller</h4>
+    <p>Hello &nbsp; everyone,&nbsp; I'm a freelancer &nbsp;in &nbsp;the &nbsp; Graphic Design&nbsp; & Web Development I have 2 years of experience,
+       with different companies <br> and customers from different countries in the world. And I have skills <br> in&nbsp;
+        programs: Adobe Photoshop&nbsp; Adobe Illustrator&nbsp; Adobe In Design. <br> I have good experience in the following
+         areas: Web Development, br HTML CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design
+          experience. 100% refund if not satisfied.</p>
+  </div>
+
 </section>
 
 
