--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
    <a class="link-button" target="_blank" href="https://cutt.ly/saiful298">See Previous Works</a><br><br>
    <img src="images/c.jpg" alt="">
   </div>
-</section>
+</section><hr>
+<marquee behavior="" direction=""> <big><mark>Hello   everyone,  I'm a freelancer  in  the   Graphic Design  & Web Development I have 2 years
+   of experience, with different companies and customers from different countries in the world. And I have skills in  programs:
+    Adobe Photoshop  Adobe Illustrator  Adobe In Design.I have good experience in the following areas: Web Development, br HTML
+     CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design experience. 100% refund if not satisfied.</mark></big> </marquee>
 <hr> <h1 class="orange"> <center> Experiences</center></h1><br>
 <section class="part-three">
   <div class="skill" >
@@ -57,11 +61,69 @@
   </div>
 
 </section>
+<br><br><br><br>
+<!--==========================Footer============================-->
+<div class="foter">
+  <footer id="footer">
+   <div class="footer-top">
+     <div class="container">
+       <div class="row">
 
+         <div class="col-lg-3 col-md-6 footer-info">
+           <h3>Saiful Islam</h3>
+           <p>I am a freelancer.I can make a website.<br> I can make a logo. I can make a website <br>using wordpress.Hire me!</p>
+         </div>
 
+         <div class="col-lg-3 col-md-6 footer-links">
+           <h4>Useful Links</h4>
+           <ul>
+             <li class="menu-active"><a href="#intro">Home</a></li>
+             <li><a href="#about">About</a></li>
+             <li><a href="#services">Services</a></li>
+             <li><a href="#skills">Skills</a></li>
+             <li><a href="#contact">Contact</a></li>
+           </ul>
+         </div>
 
+         <div class="col-lg-3 col-md-6 footer-contact">
+           <h4>Contact Us</h4>
+           <p>
+             POST: Sanarpar-1361<br>THANA: Shiddhirgonj<br>DIST: Narayangunj<br> 
+             Bangladesh <br>
+             Phone: +8801631795046<br>
+             Email: prog.saiful@gmail.com<br>
+           </p>
 
+           <div class="social-links">
+             <a href="https://www.facebook.com/saiful298" class="facebook"><i class="fa fa-facebook"></i></a>
+             <a href="cutt.ly/saiful298" class="google"><i class="far fa-envelope"></i></i></a>
+             <a href="https://www.linkedin.com/in/saiful298/" class="linkedin"><i class="fa fa-linkedin"></i></a>
+           </div>
 
+         </div>
 
+         <div class="col-lg-3 col-md-6 footer-newsletter">
+           <h4>My Newsletter</h4>
+           <p> <marquee behavior="" direction="up"> I am a freelancer. I am working on freelancer.com, fiverr.com etc. freelancing 
+             website. Hello   everyone,  I'm a freelancer  in  the   Graphic Design  & Web Development I have 2 years of experience,
+              with different companies and customers from different countries in the world. And I have skills  in  programs: Adobe
+               Photoshop  Adobe Illustrator  Adobe In Design. I have good experience in the following areas: Web Development,
+                br HTML CSS, PHP, JAVASCRIPT, JQUERY WordPress. I have 2 years of design experience. 100% refund if not satisfied.</marquee></p>
+         </div>
+
+       </div>
+     </div>
+   </div>
+<div class="container">
+     <div class="copyright">
+       &copy; Copyright &nbsp; All Rights Reserved to <strong>2022 SAIFUL ISLAM</strong>
+     </div>
+     <div class="credits">
+       
+       Designed by <a href="https://www.facebook.com/saiful298">Saiful Islam</a>
+     </div>
+    </div>
+  </footer>
+</div>
 </body>
 </html>
